[package]
name = "test_alarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
log = "0.4.8"
log4rs = "0.10.0"
itertools = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.24"
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.21.0"
hex = "0.3.1"
once_cell = "1.13.0"
mysql = "20.0.0"
#日志依赖
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
